[package]
name = "doppio-quickstart-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0.83"
tokio = { version = "1", features = ["full"] }
